# people

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  explore_protocol.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: webhook-architecture.html
docs/hackathon/: index.html  sovereign-modules-brief.html  sovereign-modules-brief.md
docs/protocol/: n3-patch.md  solid-client-requirements.json  solid-notifications.md  solid-oidc.md  solid-protocol.md  web-access-control.md  webid-profile.md
docs/research/: gov-federated-graphs-lit-review.md
pacific_solid/: __init__.py
pacific_solid/_acl/: acp.py  grant.py  modes.py  wac.py
pacific_solid/_auth/: auth_code.py  credentials.py  dpop.py  oidc.py  pod.py  session.py  token_validation.py
pacific_solid/_discovery/: storage.py
pacific_solid/_graph/: graph.py  triple.py
pacific_solid/_http/: client.py  errors.py  tls.py
pacific_solid/_identity/: webid.py
pacific_solid/_ldn/: inbox.py
pacific_solid/_model/: base.py  decorator.py  fields.py
pacific_solid/_notifications/: discovery.py  message.py  safety.py  subscription.py  webhook.py  websocket.py
pacific_solid/_rdf/: namespaces.py  parse.py  patch.py  serialize.py
people/: __init__.py
people/_acl/: acp.py  grant.py  modes.py  wac.py
people/_auth/: auth_code.py  credentials.py  dpop.py  oidc.py  pod.py  session.py  token_validation.py
people/_discovery/: storage.py
people/_graph/: graph.py
people/_http/: client.py  headers.py  tls.py
people/_identity/: webid.py
people/_ldn/: inbox.py
people/_model/: base.py  decorator.py
people/_notifications/: discovery.py  message.py  safety.py  subscription.py  websocket.py
people/_rdf/: namespaces.py  parse.py  patch.py  serialize.py
tests/e2e/: conftest.py  test_notifications.py  test_smoke.py
tests/unit/: test_acp_detection.py  test_auth_code.py  test_dpop.py  test_errors.py  test_graph.py  test_headers.py  test_hostile_client.py  test_hostile_server.py  test_jsonld_parse.py  test_ldn.py  test_model.py  test_namespaces.py  test_notification_discovery.py  test_notification_message.py  test_notification_safety.py  test_notification_subscribe.py  test_patch_builder.py  test_storage_discovery.py  test_tls.py  test_token_validation.py  test_triple.py  test_wac.py  test_wac_groups_external.py  test_wac_origin.py  test_webhook_handler.py  test_webhook_receiver.py  test_webid_extended.py  test_where_clause.py
