[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pacific-solid"
version = "0.1.0"
description = "The Python SDK for the Solid Project"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Pacific" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "rdflib>=7.0",
    "PyJWT[crypto]>=2.8",
    "cryptography>=42.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
science = ["networkx>=3.0"]
webhook = ["aiohttp>=3.9"]
all = ["pacific-solid[pandas,science,webhook]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/Pacific-Systems-Ltd/people"
Issues = "https://github.com/Pacific-Systems-Ltd/people/issues"

[tool.hatch.build.targets.wheel]
packages = ["pacific_solid", "people"]

# Ruff config lives in ./ruff.toml (synced from pacific-infra/workflows/ruff.toml).

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
